--- a/css/styles.css
+++ b/css/styles.css
@@ -37,3 +37,8 @@ header h2 {
 .navbar {
     background-color: #901cad;
 }
+
+/* Prevent media images from overflowing */
+div.media img.d-flex {
+    min-width: 0;
+}
