--- a/css/styles.css
+++ b/css/styles.css
@@ -38,10 +38,10 @@ header h2 {
     background-color: #901cad;
 }
 
-.tab-content {
-    border: 1px solid #ddd;
-    border-top: none;
-    padding: 10px;
+div#accordion a,
+a:hover {
+    color: inherit;
+    text-decoration: none;
 }
 
 /* Prevent media images from overflowing */
