--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,14 @@ a:hover {
     text-decoration: none;
 }
 
+.carousel-caption {
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.carousel {
+    border: solid #5637dd;
+}
+
 /* Prevent media images from overflowing */
 div.media img.d-flex {
     min-width: 0;
