Nucampsite About and Contact pages redesign

--- a/views/aboutus.ejs
+++ b/views/aboutus.ejs
@@ -14,7 +14,7 @@
                     <!-- Breadcrumbs -->
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item">
-                            <a href="index.html">Home</a>
+                            <a href="/">Home</a>
                         </li>
                         <li class="breadcrumb-item active">About Us</li>
                     </ol>
@@ -84,119 +84,124 @@
                     <h3>Community Partners</h3>
 
                     <div id="accordion">
-                        <div class="card">
-                            <div role="tab" class="card-header">
-                                <h4>
-                                    <a
-                                        data-toggle="collapse"
-                                        data-target="#bootstrap"
-                                    >
+                        <a
+                            data-toggle="collapse"
+                            data-target="#bootstrap"
+                        >
+                            <div class="card mt-3">
+                                <div role="tab" class="card-header">
+                                    <h4>
                                         Bootstrap Outfitters
-                                        <small>Outdoor Gear Specialists</small>
-                                    </a>
-                                </h4>
-                                <div
-                                    class="collapse show"
-                                    id="bootstrap"
-                                    data-parent="#accordion"
-                                >
-                                    <div class="card-body">
-                                        <p class="d-none d-sm-block">
-                                            Bootstrap Outfitters supplies you
-                                            with the gear you need at prices you
-                                            can't beat.
-                                        </p>
+                                        <small class="text-muted">Outdoor Gear Specialists <spam class="fa fa-chevron-down float-right mt-1" /></small>
+                                    </h4>
+                                    <div
+                                        class="collapse"
+                                        id="bootstrap"
+                                        data-parent="#accordion"
+                                    >
+                                        <div class="card-body">
+                                            <p class="d-sm-block">
+                                                Bootstrap Outfitters supplies you
+                                                with the gear you need at prices you
+                                                can't beat.
+                                            </p>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="card">
-                            <div role="tab" class="card-header">
-                                <h4>
-                                    <a
-                                        class="collapsed"
-                                        data-toggle="collapse"
-                                        data-target="#git"
-                                    >
+                        </a>
+
+                        <a
+                            class="collapsed"
+                            data-toggle="collapse"
+                            data-target="#git"
+                        >
+                            <div class="card mt-3">
+                                <div role="tab" class="card-header">
+                                    <h4>
                                         Git Out Expeditions
-                                        <small
-                                            >Group Adventure Expeditions</small
-                                        >
-                                    </a>
-                                </h4>
-                                <div
-                                    class="collapse"
-                                    id="git"
-                                    data-parent="#accordion"
-                                >
-                                    <div class="card-body">
-                                        <p class="d-none d-sm-block">
-                                            Join Git Out Expeditions to explore
-                                            new horizons with a group of other
-                                            adventurers!
-                                        </p>
+                                        <small class="text-muted">
+                                            Group Adventure Expeditions <spam class="fa fa-chevron-down float-right mt-1" />
+                                        </small>
+                                    </h4>
+                                    <div
+                                        class="collapse"
+                                        id="git"
+                                        data-parent="#accordion"
+                                    >
+                                        <div class="card-body">
+                                            <p class="d-sm-block">
+                                                Join Git Out Expeditions to explore
+                                                new horizons with a group of other
+                                                adventurers!
+                                            </p>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="card">
-                            <div role="tab" class="card-header">
-                                <h4>
-                                    <a
-                                        class="collapsed"
-                                        data-toggle="collapse"
-                                        data-target="#mongo"
-                                    >
+                        </a>
+
+
+                        <a
+                            class="collapsed"
+                            data-toggle="collapse"
+                            data-target="#mongo"
+                        >
+                            <div class="card mt-3">
+                                <div role="tab" class="card-header">
+                                    <h4>
                                         Mongo Fly Shop
-                                        <small
+                                        <small class="text-muted"
                                             >Your Neighborhood Fly Fishing
-                                            Shop</small
+                                            Shop <spam class="fa fa-chevron-down float-right mt-1" /></small
                                         >
-                                    </a>
-                                </h4>
-                                <div
-                                    class="collapse"
-                                    id="mongo"
-                                    data-parent="#accordion"
-                                >
-                                    <div class="card-body">
-                                        <p class="d-none d-sm-block">
-                                            Need a new fishing pole, a
-                                            tacklebox, or flies of all kinds?
-                                            Stop by Mongo Fly Shop.
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card">
-                            <div role="tab" class="card-header">
-                                <h4>
-                                    <a
-                                        class="collapsed"
-                                        data-toggle="collapse"
-                                        data-target="#node"
+                                    </h4>
+                                    <div
+                                        class="collapse"
+                                        id="mongo"
+                                        data-parent="#accordion"
                                     >
-                                        Node Outdoor Apparel
-                                        <small>Outdoor Clothes & Shoes</small>
-                                    </a>
-                                </h4>
-                                <div
-                                    class="collapse"
-                                    id="node"
-                                    data-parent="#accordion"
-                                >
-                                    <div class="card-body">
-                                        <p class="d-none d-sm-block">
-                                            From polar fleeces to swimsuits,
-                                            hiking boots to waders, a visit to
-                                            Node will be sure to get you
-                                            covered.
-                                        </p>
+                                        <div class="card-body">
+                                            <p class="d-sm-block">
+                                                Need a new fishing pole, a
+                                                tacklebox, or flies of all kinds?
+                                                Stop by Mongo Fly Shop.
+                                            </p>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </a>
+
+
+                        <a
+                            class="collapsed"
+                            data-toggle="collapse"
+                            data-target="#node"
+                        >
+                            <div class="card mt-3">
+                                <div role="tab" class="card-header">
+                                    <h4>
+                                        Node Outdoor Apparel
+                                        <small class="text-muted">Outdoor Clothes & Shoes <spam class="fa fa-chevron-down float-right mt-1" /></small>  
+                                    </h4>
+                                    <div
+                                        class="collapse"
+                                        id="node"
+                                        data-parent="#accordion"
+                                    >
+                                        <div class="card-body">
+                                            <p class="d-sm-block">
+                                                From polar fleeces to swimsuits,
+                                                hiking boots to waders, a visit to
+                                                Node will be sure to get you
+                                                covered.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
                     </div>
                 </div>
             </div>
