--- a/views/contactus.ejs
+++ b/views/contactus.ejs
@@ -13,7 +13,7 @@
                 <div class="col">
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item">
-                            <a href="index.html">Home</a>
+                            <a href="/">Home</a>
                         </li>
                         <li class="breadcrumb-item active">Contact</li>
                     </ol>
@@ -23,19 +23,35 @@
             </div>
 
             <div class="row row-content align-items-center">
-                <div class="col-sm-4">
-                    <h5>Our Address</h5>
-                    <address>
-                        1 Nucamp Way<br />
-                        Seattle, WA 98001<br />
-                        U.S.A.
-                    </address>
+                <div class="col-lg-6">
+                    <div class="card mb-3">
+                        <div class="card-body">
+                            <h5 class="card-title">Our Address</h5>
+                            <address class="card-text">
+                                1 Nucamp Way<br />
+                                Seattle, WA 98001<br />
+                                U.S.A.
+                            </address>
+                        </div>
+                    </div>
+                    <div class="card mb-4 mb-lg-0">
+                        <div class="card-body">
+                            <h5 class="card-title">Contact</h5>
+                            <p class="card-text">
+                                <a role="button" class="btn btn-link" href="tel:+12065551234"><i class="fa fa-phone"></i> 1-206-555-1234</a><br />
+                                <a role="button" class="btn btn-link" href="mailto:campsites@nucamp.co"><i class="fa fa-envelope-o"></i> campsites@nucamp.co</a>
+                            </p>
+                        </div>
+                    </div>
                 </div>
-                <div class="col">
-                <a role="button" class="btn btn-link" href="tel:+12065551234"><i class="fa fa-phone"></i> 1-206-555-1234</a><br />
-                <a role="button" class="btn btn-link" href="mailto:campsites@nucamp.co"><i class="fa fa-envelope-o"></i> campsites@nucamp.co</a>
+                <div class="col-lg-6">
+                    <div class="embed-responsive embed-responsive-4by3">
+                        <iframe class="embed-responsive-item" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d343529.0705630472!2d-122.30178331895348!3d47.72672579825537!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54906d189687c09d%3A0xe86c3ff96948a99f!2sNucamp%20Coding%20Bootcamp%20Bellevue!5e0!3m2!1sen!2scz!4v1676464868962!5m2!1sen!2scz" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                </div>    
             </div>
-            </div>
+            
+            
 
             <div class="row row-content">
                 <div class="col-12">
