--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -38,5 +38,11 @@
         />
         <link rel="stylesheet" href="css/styles.css" />
         <title>NuCamp: A Better Way To Camp</title>
+        <link
+            rel="icon"
+            type="image/png"
+            href="https://www.nucamp.co/assets/icon/favicon-196x196.png"
+            sizes="196x196"
+        />
     </head>
-
+</html>
