--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
     <div class="container">
-        <a class="navbar-brand" href="#"
+        <a class="navbar-brand" href="/"
             ><img src="img/logo.png" height="30" width="30"
         /></a>
         <button
@@ -14,13 +14,13 @@
 
         <div class="collapse navbar-collapse" id="nucampNavbar">
             <ul class="navbar-nav">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="/"
                         ><i class="fa fa-home fa-lg"></i> Home</a
                     >
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="aboutus"
+                    <a class="nav-link" href="/aboutus"
                         ><i class="fa fa-info fa-lg"></i> About</a
                     >
                 </li>
@@ -36,13 +36,19 @@
                 </li>
             </ul>
             <span class="navbar-text ml-auto">
-                <a role="button" data-toggle="modal" data-target="#loginModal">
+                <a
+                    role="button"
+                    data-toggle="modal"
+                    data-target="#loginModal"
+                    class="btn btn-light text-dark"
+                >
                     <i class="fa fa-sign-in"></i> Login
                 </a>
             </span>
         </div>
     </div>
 </nav>
+
 <div id="loginModal" class="modal fade" role="dialog">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
